<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBlue"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".TomatoClockActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_down_title"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/remainingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/count_down_default_time"
            android:paddingTop="120dp"
            android:textSize="32sp" />

        <ProgressBar
            android:id="@+id/remainingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:progressDrawable="@drawable/progress_bar_style"
            android:progress="40"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/taskNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:paddingTop="100dp"
            android:text="@string/count_down_task_default" />

        <TextView
            android:id="@+id/stageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/count_down_stage_default"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_down_start_button" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_down_stop_button" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>